--- a/index.html
+++ b/index.html
@@ -184,6 +184,16 @@
                     <div class="p-4 bg-supporting-light-blue rounded-lg">
                         <h4 class="level3-title font-semibold text-primary-blue">인터뷰 대상 1: 김하진 학생</h4>
                         <p class="body-text mt-1">AI를 주로 "심심하다", "놀아달라"와 같이 심심할 때 놀이 용도로 사용한다고 답했으며, AI 응답에 대한 만족도가 높아 실패 경험이 거의 없다고 답했다. AI 사용 빈도는 낮으며, 일정한 루틴 없이 필요할 때 사용한다고 덧붙였다.</p>
+                        <div class="p-4 bg-supporting-light-blue rounded-lg">
+                        <h4 class="level3-title font-semibold text-primary-blue">인터뷰 대상 1: 김하진 학생</h4>
+                        <p class="body-text mt-1">AI를 주로 "심심하다", "놀아달라"와 같이 심심할 때 놀이 용도로 사용한다고 답했으며, AI 응답에 대한 만족도가 높아 실패 경험이 거의 없다고 답했다. AI 사용 빈도는 낮으며, 일정한 루틴 없이 필요할 때 사용한다고 덧붙였다.</p>
+                        
+                        <!-- 아래 img 태그에 이미지 URL을 넣어주세요 -->
+                        <img src="src/국어 인터뷰 1.JPG" 
+                             alt="김하진 학생 인터뷰 사진" 
+                             class="mt-4 rounded-lg w-full h-auto object-cover shadow-md"
+                             onerror="this.onerror=null;this.src='https://placehold.co/400x300/FFFFFF/263238?text=이미지+로드+실패';">
+                    </div>
                     </div>
                     <div class="p-4 bg-supporting-light-blue rounded-lg">
                         <h4 class="level3-title font-semibold text-primary-blue">인터뷰 대상자 2: 이유민 학생</h4>
