--- a/index.html
+++ b/index.html
@@ -193,7 +193,11 @@
                              alt="김하진 학생 인터뷰 사진" 
                              class="mt-4 rounded-lg w-full h-auto object-cover shadow-md"
                              onerror="this.onerror=null;this.src='https://placehold.co/400x300/FFFFFF/263238?text=이미지+로드+실패';">
-                    </div>
+                        <img src="src/국어 인터뷰 2.JPG" 
+                            alt="이유민 학생 인터뷰 사진" 
+                            class="mt-4 rounded-lg w-full h-auto object-cover shadow-md"
+                            onerror="this.onerror=null;this.src='https://placehold.co/400x300/FFFFFF/263238?text=이미지+로드+실패';">
+                            </div>
                     </div>
                     <div class="p-4 bg-supporting-light-blue rounded-lg">
                         <h4 class="level3-title font-semibold text-primary-blue">인터뷰 대상자 2: 이유민 학생</h4>
